<resources>
    <string name="app_name">DesafioOpahIt</string>
    <string name="btnPeople">People</string>
    <string name="btnSpecies">Species</string>
    <string name="contentStarWarsLogo" />
    <string name="contentStarLogo" />
    <string name="youngPad">My Young Padawan!</string>
    <string name="sourceDescHelp">Help Button</string>
    <string name="greetings">Greetings</string>
    <string name="contentLogo">Logo Star Wars</string>
    <string name="personDuel">light saber duel</string>
    <string name="hintNomePessoa">Search for the character</string>
    <string name="btnBuscaPessoa">Search</string>
    <string name="inforPersonContent">Person informations</string>
    <string name="searchCharacterContent">Search for the character</string>
    <string name="btnBack">Return to title </string>
    <string name="hintSpeciesName">Search for a specie</string>
    <string name="imageSpeciesContent">Baby yoda image</string>
    <string name="personImageContent">Darth Vader and Obi Wan duel</string>
    <string name="btnHomeContent">Home button</string>
    <string name="btnFavorite">Favorite</string>
</resources>