<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchSpeciesActivity"
    android:background="@drawable/back_star_wars"
    >

        <Button
            android:id="@+id/btnSearchSpecies"
            android:layout_width="113dp"
            android:layout_height="55dp"
            android:onClick="btnSearch"
            android:text="@string/btnBuscaPessoa"
            android:textColor="@color/white"
            app:backgroundTint="@color/cardview_shadow_end_color"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextSpeciesName"
            app:layout_constraintStart_toStartOf="@+id/editTextSpeciesName"
            app:layout_constraintTop_toBottomOf="@+id/editTextSpeciesName"
            app:strokeColor="#FCDF2B"
            app:strokeWidth="2dp" />

        <ImageView
            android:id="@+id/btnHelpSpecies"
            android:layout_width="67dp"
            android:layout_height="51dp"
            android:contentDescription="@string/sourceDescHelp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toEndOf="@+id/textViewInfoSpecies"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976"
            app:srcCompat="@drawable/ic_baseline_help_outline_24" />

    <EditText
        android:id="@+id/editTextSpeciesName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/hintSpeciesName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/golddDark"
        android:textColorHint="@color/gold"
        android:textColorLink="@color/golddDark"
        app:layout_constraintEnd_toEndOf="@+id/gifImageView"
        app:layout_constraintStart_toStartOf="@+id/gifImageView"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

        <EditText
            android:id="@+id/textViewInfoSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:clickable="false"
            android:contentDescription="@string/inforPersonContent"
            android:editable="false"
            android:ems="10"
            android:gravity="start|top"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSearchSpecies"
            app:layout_constraintVertical_bias="0.0" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="256dp"
        android:layout_height="174dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/starwars_species"
        android:contentDescription="@string/imageSpeciesContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/starwars_species" />

    <ImageView
        android:id="@+id/btnHomeSpecies"
        android:layout_width="67dp"
        android:layout_height="51dp"
        android:contentDescription="@string/btnHomeContent"
        android:onClick="btnHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewInfoSpecies"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/ic_baseline_home_24" />

</androidx.constraintlayout.widget.ConstraintLayout>